Now renders on the server.

--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="target"></div>
+  <div id="target"><%= body %></div>
   <script src="app.js"></script>
 </body>
 </html>
